--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,40 +7,30 @@ on:
   pull_request:
 
 jobs:
-  # This workflow contains a single job called "deploy"
   deploy:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Step 1 - Checks-out your repository under $GITHUB_WORKSPACE
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: true # Fetch Hugo themes
           fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
 
-      # Step 2 - Sets up the latest version of Hugo
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: "latest"
 
-      # Step 3 - Clean and don't fail
       - name: Clean public directory
-        run: ls -lah && rm -rf public
+        run: rm -rf public
 
-      # Step 4 - Builds the site using the latest version of Hugo
-      # Also specifies the theme we want to use
       - name: Build
         run: hugo --config config/config.toml #--theme=fresh
 
-      # Step 5 - Create name file
       - name: Create cname file
         run: echo 'new.dangerous.tech' > public/CNAME
 
-      # Step 6 - Push our generated site to our gh-pages branch
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
