--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -26,7 +26,7 @@ jobs:
         run: tree && rm -rf public
 
       - name: Build
-        run: hugo --config config/config.toml --theme fresh --themesDir config/themes
+        run: hugo --config config/config.toml --theme PaperMod
 
       - name: Create cname file
         run: echo 'new.dangerous.tech' > public/CNAME
