--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,7 +29,7 @@ jobs:
         run: hugo --config config/config.toml --theme PaperMod
 
       - name: Create cname file
-        run: echo 'new.dangerous.tech' > public/CNAME
+        run: echo 'josh.services' > public/CNAME
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
