fix: update site info

--- a/config/config.toml
+++ b/config/config.toml
@@ -1,3 +1,6 @@
 baseURL = 'http://josh.services/'
 languageCode = 'en-gb'
 title = 'Dangerous.Tech'
+description = 'Networking, Security and Code'
+author = 'Josh J'
+defaultTheme = 'dark'
