--- a/config/config.toml
+++ b/config/config.toml
@@ -1,7 +1,8 @@
 baseURL = 'http://josh.services/'
 languageCode = 'en-gb'
-title = 'Dangerous.Tech'
-description = 'Networking, Security and Code'
-author = 'Josh J'
-keywords = ['blog', 'devops', 'security']
-defaultTheme = 'dark'
+[ params ]
+    title = 'Dangerous.Tech'
+    description = 'Networking, Security and Code'
+    author = 'Josh J'
+    keywords = ['blog', 'devops', 'security']
+    defaultTheme = 'dark'
