--- a/config/config.toml
+++ b/config/config.toml
@@ -2,7 +2,7 @@ baseURL = 'http://josh.services/'
 languageCode = 'en-gb'
 title = 'Dangerous.Tech'
 [ Params ]
-    name = 'Dangerous.Tech'
+    title = 'Dangerous.Tech'
     description = 'Networking, Security and Code'
     author = 'Josh J'
     keywords = ['blog', 'devops', 'security']
