--- a/config/config.toml
+++ b/config/config.toml
@@ -10,13 +10,13 @@ title = 'Dangerous.Tech'
     showtoc = true
     ShowPostNavLinks = true
 
-[ menu ]
-    [ main ]
-        [ identifier.categories ]
-        name = 'categories'
-        url = '/categories/'
-        weight = 10
-        [ identifier.tags ]
-        name = 'tags'
-        url = '/tags/'
-        weight = 20
+#[ menu ]
+#    [ main ]
+#        [ identifier.categories ]
+#        name = 'categories'
+#        url = '/categories/'
+#        weight = 10
+#        [ identifier.tags ]
+#        name = 'tags'
+#        url = '/tags/'
+#        weight = 20
