--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: dangeroustech/dangeroustech-blog
-          token: ${{ secrets.GITHUB_TOKEN }}
+          ssh-key: ${{ secrets.GITHUB_DEPLOY_KEY }}
           submodules: true # Fetch Hugo themes
           fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
 
