--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,7 +32,7 @@ jobs:
         run: tree && rm -rf public
 
       - name: Build
-        run: hugo --theme PaperMod
+        run: hugo --minify --theme PaperMod
 
       - name: Create cname file
         run: echo 'josh.services' > public/CNAME
