--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Create cname file
         run: echo 'dangerous.tech' > public/CNAME
 
+      - name: Create Google Adsense file
+        run: echo 'google.com, pub-3139375174722237, DIRECT, f08c47fec0942fa0' > ads.txt
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
