--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -6,7 +6,7 @@ on:
       commit_sha:
         description: 'Triggering SHA'
         required: true
-        default: "${{GITHUB_SHA}}"
+        default: "$GITHUB_SHA"
   push:
     branches:
       - main
